# ai-persona

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyrightconfig.json
apps/chat/: package.json  pnpm-lock.yaml
apps/chat/src/app/: globals.css  layout.tsx  page.tsx
apps/voice/: Dockerfile  main.py  pyproject.toml  railway.json
apps/voice/routers/: calendar.py  chat.py  vapi.py
apps/voice/services/: calcom.py  calendar.py  llm.py  persona.py  rag.py
