[project]
name = "voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "groq>=1.4.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
